implements CSV Parsing; Mapping from csv to entities; implements API and Service