@@ -8,7 +8,16 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '20'
+    sourceCompatibility = "19.PREVIEW"
+    targetCompatibility = "19.PREVIEW"
+}
+
+compileJava {
+    options.compilerArgs += '--enable-preview'
+}
+
+compileTestJava {
+    options.compilerArgs += '--enable-preview'
 }
 
 repositories {
@@ -20,9 +29,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    //implementation 'org.hibernate.orm:hibernate-community-dialects:6.2.7.Final'
+    implementation 'com.opencsv:opencsv:5.8'
     implementation 'com.h2database:h2:2.2.220'
-    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.15.2'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
@@ -30,3 +38,4 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
